GNOME Bugzilla – Bug 695070
window-menus: fix double-free
Last modified: 2013-03-04 19:57:50 UTC
Created attachment 237886 [details] [review] window-menus: fix double-free patch attached
Review of attachment 237886 [details] [review]: Looks good, thanks.
Attachment 237886 [details] pushed as dcc3799 - window-menus: fix double-free Pushed to master for 3.7.91.