window-menus: fix double-free

https://bugzilla.gnome.org/show_bug.cgi?id=695070